rocketchat/dp-bot.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rc-bot
  namespace: rc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rc-bot
    spec:
      containers:
      - name: bot
        image: rocketchat/hubot-rocketchat:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /home/hubot/scripts
          name: scripts
      volumes:
      - name: scripts
        hostPath:
          path: /chat/scripts
          type: Directory
