rocketchat/dp-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rc-web
  namespace: rc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rc-web
  template:
    metadata:
      labels:
        app: rc-web
    spec:
      containers:
      - name: web
        image: rocketchat/rocket.chat:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: /app/uploads
          name: uploads
      volumes:
      - name: uploads
        hostPath:
          path: /chat/uploads
          type: Directory
