rocketchat/ss-mongo.yaml

apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: mongo
  namespace: rc
spec:
  serviceName: rc-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: rc-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:3.0
          securityContext:
            runAsUser: 0
          args:
            - --smallfiles 
          ports:
            - containerPort: 27017
              name: mongo
          readinessProbe:
            exec:
              command: ['mongo', '--eval', 'quit(0)']
          volumeMounts:
            - name: mongo-volume
              mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: mongo-volume
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 50Gi
